# WinkStudio

./: .gitignore  README.md  WinkStudio.pro  main.cpp  mainwindow.cpp
Record/: CaptureAudioThread.cpp  CaptureAudioThread.h  CaptureVideoThread.cpp  CaptureVideoThread.h  FpsControl.cpp  FpsControl.h  Record.pri  Recorder.cpp  Recorder.h  SingletonUtils.cpp  SingletonUtils.h
algorithm/: algorithm.pro
algorithm/kmp/: kmp.cpp  kmp.hpp
algorithm/strhash/: strhash.cpp  strhash.hpp
app/: app.cpp  app.pro
config/: config.cpp  config.h  config.pro
core/: core.pro
core/keyecho/: keyecho.cpp  keyecho.hpp  keyecho.pro
core/record/: record.cpp  record.hpp  record.pro
dialogabout/: dialogabout.cpp  dialogabout.h  dialogabout.pro  dialogabout.ui
dialogset/: dialogset.cpp  dialogset.h  dialogset.pro
frontend/: frontend.pro
frontend/audioplayerwidget/: audioplayerwidget.cpp  audioplayerwidget.hpp  audioplayerwidget.pro  audioplayerwidget.ui
frontend/dialogabout/: dialogabout.cpp  dialogabout.pro  dialogabout.ui
frontend/dialogset/: dialogset.cpp  dialogset.pro  dialogset.ui
frontend/keyecholabel/: keyecholabel.cpp  keyecholabel.hpp
global/: global.hpp  global.pro
mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.pro  mainwindow.ui
network/: network.pro  socketthread.cpp  socketthread.hpp
network/server/: CMakeLists.txt  client.cpp  client.h  client.hpp  database.cpp  database.hpp  main.cpp  server.cpp  server.h  server.pro
plugin/: keyecho.cpp  keyecho.hpp
resource/images/: images.qrc
templatewidgets/: templatewidgets.pro
utils/: utils.pro
(+37 files in other folders)
